some linting changes

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,5 +4,13 @@
     ],
     "env": {
         "browser": true
-    }
+    },
+	"rules": {
+		"space-in-parens": ["error", "never"],
+		"space-before-function-paren": ["error", {
+			"anonymous": "ignore",
+			"named": "ignore",
+			"asyncArrow": "ignore"
+		}]
+	}
 }
