--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,13 @@
 {
     "singleQuote": false,
+	"overrides": [
+		{
+			"files": "*.js",
+			"options": {
+				"singleQuote": true
+			}
+		}
+	],
     "jsxBracketSameLine": false,
     "jsxSingleQuote": true,
     "printWidth": 800,
