--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "compile:rtl": "rtlcss style.css style-rtl.css",
     "lint:scss": "wp-scripts lint-style 'src/scss/**/*.scss'",
     "lint:js": "wp-scripts lint-js 'js/*.js'",
+	"lint:js:src": "wp-scripts lint-js ./src",
     "bundle": "dir-archiver --src . --dest ../_s.zip --exclude .DS_Store .stylelintrc.json .eslintrc .git .gitattributes .github .gitignore README.md composer.json composer.lock node_modules vendor package-lock.json package.json .travis.yml phpcs.xml.dist sass style.css.map yarn.lock"
   }
 }
