--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions"
+    "last 2 versions",
+	"not ie > 0",
+	"not ie_mob > 0"
   ],
   "scripts": {
     "start": "wp-scripts start",
